# RenderEngine

./: .clang-format  .gitignore  AntsAttack.sln  AntsAttack.vcxproj  AntsAttack.vcxproj.filters  BaseRenderer.h  Block.cpp  Block.h  Block2D.cpp  CMakeLists.txt  FlockComputeShader.hlsl  FlockVertexShader.hlsl  Font.cpp  Font.h  FontCharDescription.cpp  FontCharDescription.h  InstanceData.h  InstancedRenderEngine2D.cpp  InstancedRendererEngine2D.cpp  InstancedRendererEngine2D.h  Main.cpp  Main.h  Mesh.h  README.md  RandomGenerator.cpp  RandomGenerator.h  RendererEngine2D.cpp  RendererEngine2D.h  SquareMesh.cpp  SquareMesh.h  SquareWaveVertexShader.hlsl  TextInputData.h  TextPixelShader.hlsl  TextVertexShader.hlsl  TriangleMesh.cpp  TriangleMesh.h  UV.h  Utilities.cpp  Utilities.h  Vector2D.h  (+7 more)
AntsAttack/x64/Debug/: AntsAttack.exe.recipe  vc143.idb
AntsAttack/x64/Debug/AntsAttack.tlog/: AntsAttack.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source/: Application.cpp  Application.h  BaseRenderer.h  Block2D.cpp  Block2D.h  Button.cpp  Button.h  FoodNode.h  GameEnums.h  Hazard.h  ImGuiRenderer.cpp  ImGuiRenderer.h  InstanceData.h  InstancedRendererEngine2D.cpp  InstancedRendererEngine2D.h  Main.cpp  Main.h  Mesh.h  RandomGenerator.cpp  RandomGenerator.h  RendererEngine2D.cpp  RendererEngine2D.h  UIPanelCB.cpp  UIPanelCB.h  Utilities.cpp  Utilities.h  Vector2D.h  Vector4D.h  Vertex.h  VertexInputData.h
Source/Game/: AntGame.cpp  AntGame.h  GameWorldState.h
Source/Objects/: PartyParticle.h  SquareMesh.cpp  SquareMesh.h  TriangleMesh.cpp  TriangleMesh.h
Source/Rendering/: DrawHelpers.h  QuadRenderer2D.cpp  QuadRenderer2D.h  RenderStates.h
Source/Shaders/: ColorVertexShader.hlsl  FlockComputeShader.hlsl  FlockVertexShader.hlsl  ImGuiPixelShader.hlsl  ImGuiVertexShader.hlsl  PlainPixelShader.hlsl  SquareWaveVertexShader.hlsl  TextPixelShader.hlsl  UIPanelVertexShader.hlsl
tests/: RandomGeneratorTests.cpp
